--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="calc">
         <input type="text" id="inputext" placeholder="0" >
 
-        <button onclick="clr()">CLR</button>
+        <button onclick="clr()">AC</button>
         <button onclick="del()">DEL</button>
         <button onclick="calculate('%')">%</button>
         <button onclick="calculate('/')">/</button>
